vertical alignment of search bar in store fixed
closes #122

--- a/template/templates/newEnglandArbors/scss/modules.scss
+++ b/template/templates/newEnglandArbors/scss/modules.scss
@@ -32,7 +32,7 @@
 				border: none;
 				font-size: 16px;
 				border-radius: 10px;
-				line-height: 25px;
+				height: 25px;
 				width: 100px;
 
 				.ie7 &, .ie8 & {
